k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  labels:
    app: backend-deploy
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-deploy
  template:
    metadata:
      labels:
        app: backend-deploy
    spec:
      containers:
      - name: backend-deploy
        image: ak0211/chat-app-backend:v2
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend-service
  namespace: chat-app
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
    nodePort: 30500
  selector:
    app: backend-deploy
