k8s/db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deploy
  labels:
    app: mongo
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:6
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: chat-app
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
