k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
  labels: 
    app: frontend-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-deploy
  template:
    metadata:
      labels: 
        app: frontend-deploy
    spec:
      containers: 
        - name: frontend-deploy
          image: ak0211/chat-app-frontend:v1
          ports:
          -  containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels: 
    app: frontend-service
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    #nodePort: 32000
  selector:
    app: frontend-deploy
